@@ -6,6 +6,7 @@ This file documents the revision history for mod_gearman.
           - added optional workaround for plugins exiting with rc 25 because
             of duplicate execution
           - removed version output to stderr while reloading/starting the core
+          - check server definition for duplicates
 
 1.0.8  Fri Jul 22 22:21:34 CEST 2011
           - use identifier for error messages if set
